@@ -2423,13 +2423,20 @@ label(OPTION_RES_RECURSE)dit(bf(tt(res-recurse)))
 label(OPTION_RES_DEFNAMES)dit(bf(tt(res-defnames)))
 label(OPTION_RES_STAYOPEN)dit(bf(tt(res-stayopen)))
 label(OPTION_RES_DNSRCH)dit(bf(tt(res-dnsrch)))
-   These options temporarily set the corresponding resolver (name resolution)
-   option flags. Append "=0" to clear a default option. See man
-   NOEXPAND(resolver(5)) for more information on these options. These flags are
-   per process, however socat() restores the old values after name resolution.
+   These options set the corresponding resolver (name resolution) option flags.
+   Append "=0" to clear a default option. See man NOEXPAND(resolver(5)) for
+   more information on these options. Socat() restores the old values after
+   finishing the open phase of the address, so these options are valid just for
+   the address they are applied to.nl()
    Please note that these flags only affect DNS resolution, but not hosts or
    NIS based name resolution, and they have no effect when (g)libc retrieves
    the results from code(nscd).
+label(OPTION_RES_RETRANS)dit(bf(tt(res-retrans=<int>)))
+   Sets the retransmission time interval of the DNS resolver (based on an
+   undocumented feature).
+label(OPTION_RES_RETRY)dit(bf(tt(res-retry=<int>)))
+   Sets the number of retransmits of the DNS resolver (based on an undocumented
+   feature).
 enddit()
 
 startdit()enddit()nl()
