@@ -630,6 +630,8 @@ enum e_optcode {
    OPT_RES_IGNTC,	/* resolver(3) */
    OPT_RES_PRIMARY,	/* resolver(3) */
    OPT_RES_RECURSE,	/* resolver(3) */
+   OPT_RES_RETRANS,	/* undocumented */
+   OPT_RES_RETRY,	/* undocumented */
    OPT_RES_STAYOPEN,	/* resolver(3) */
    OPT_RES_USEVC,	/* resolver(3) */
    OPT_RETRIEVE_VLAN, 	/* Linux: get VLAN info on raw sockets per auxdata */
